Add admin APIs, issues & audit migrations
Add DB migrations for issues and audit_logs and introduce a broad set of admin and staff endpoints. New admin controllers (users, categories, issues, ops monitor, overrides, AI, audit logs) and staff controllers (issues, notifications, files, user devices) plus supporting DTOs, services and repositories were added to manage operational workflows, issue reporting/resolution and audit tracing. SecurityConfig was adjusted to enforce admin/staff role rules and disable CORS credentials; StaticResourceConfig now serves staff uploads. Pom updated to Java 17 and spring-boot-starter-mail added. Order API now accepts voucherCode and exposes available vouchers. AuditController/DTOs updated to support paginated search and richer audit payloads. Miscellaneous service/controller/repository changes and tests added to support these features.